--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  device_preview: ^1.2.1
   get: ^4.7.2
   carousel_slider: ^5.1.1
   smooth_page_indicator: ^1.2.1
   http: ^1.5.0
-  google_nav_bar: ^5.0.7
+  shared_preferences: ^2.5.3
+  flutter_screenutil: ^5.9.3
+
   line_icons: ^2.0.1
+  google_fonts: ^5.0.0
 
 dev_dependencies:
   flutter_test:
