--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
 
   device_preview: ^1.2.1
   get: ^4.7.2
-
+  fl_chart: ^1.1.1
   http: ^1.5.0
   shared_preferences: ^2.5.3
   flutter_screenutil: ^5.9.3
