--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   line_icons: ^2.0.1
   carousel_slider: ^5.1.1
   smooth_page_indicator: ^1.2.1
+  font_awesome_flutter: ^10.12.0
 #  google_fonts: ^5.0.0
 
 dev_dependencies:
