--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   carousel_slider: ^5.1.1
   smooth_page_indicator: ^1.2.1
   font_awesome_flutter: ^10.12.0
+  image_picker: ^1.0.4
 #  google_fonts: ^5.0.0
 
 dev_dependencies:
