--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   font_awesome_flutter: ^10.12.0
   image_picker: ^1.0.4
+  flutter_image_compress: ^2.4.0
+  
 #  google_fonts: ^5.0.0
 
 dev_dependencies:
