--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter_image_compress: ^2.4.0
   fluttertoast: ^8.2.14
   toastification: ^3.0.3
+  get_storage: ^2.1.1
+  dio: ^5.9.0
   
 #  google_fonts: ^5.0.0
 
